# hagll

./: GSS.hs  Grammar.hs  LICENSE  NOTES  SAB.hs  Scratch.hs  Tests.hs  coverage.sh  hagll.cabal  rebuild.sh  test.hs
